--- a/translate-top/translate-api/pom.xml
+++ b/translate-top/translate-api/pom.xml
@@ -9,7 +9,33 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>healper.api</artifactId>
+  <artifactId>translate-api</artifactId>
+  <packaging>jar</packaging>
+
+
+
+  <dependencies>
+
+    <!--                         swagger开始                   -->
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+      <version>${swagger2.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger-ui</artifactId>
+      <version>${swagger2.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-staticdocs</artifactId>
+      <version>${swagger2.version}</version>
+    </dependency>
+    <!--                         swagger结束                   -->
+
+
+  </dependencies>
 
 
 </project>
