--- a/translate-top/translate-common/pom.xml
+++ b/translate-top/translate-common/pom.xml
@@ -8,12 +8,12 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-
-  <artifactId>helper.common</artifactId>
+  <packaging>jar</packaging>
+  <artifactId>translate-common</artifactId>
   <dependencies>
     <dependency>
       <groupId>com.translate</groupId>
-      <artifactId>healper.api</artifactId>
+      <artifactId>translate-api</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
 
