--- a/translate-top/translate-services/pom.xml
+++ b/translate-top/translate-services/pom.xml
@@ -158,6 +158,12 @@
       <version>3.4</version>
     </dependency>
 
+    <!--发送邮件-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-mail</artifactId>
+    </dependency>
+
   </dependencies>
 
   <build>
