--- a/translate-top/pom.xml
+++ b/translate-top/pom.xml
@@ -37,6 +37,16 @@
       <version>1.16.18</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context-support</artifactId>
+      <version>RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.1</version>
+    </dependency>
   </dependencies>
 
 
