--- a/translate-top/translate-services/src/main/resources/application.yml
+++ b/translate-top/translate-services/src/main/resources/application.yml
@@ -1,11 +1,3 @@
 spring:
-  datasource:
-    url: jdbc:mysql://119.29.22.107:3306/test?useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull
-    username: root
-    password: Huawei123
-    driver-class-name: com.mysql.jdbc.Driver
-  mail:
-    host: smtp.163.com
-    username: aohuanhuanhw@163.com
-    password: root123456
-    default-encoding: UTF-8
+  profiles:
+    active: dev
