--- a/translate-top/translate-frontend/.gitignore
+++ b/translate-top/translate-frontend/.gitignore
@@ -1,16 +1,10 @@
+.idea
+.idea/
 .DS_Store
 node_modules/
-dist/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-test/unit/coverage
-test/e2e/reports
-selenium-debug.log
-
-# Editor directories and files
-.idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
+.project
+dist
+dist/*
+src/config/*.tmp
+src/config/env.js
+npm-debug.log
