--- a/微信小程序模板/weixindemo/project.config.json
+++ b/微信小程序模板/weixindemo/project.config.json
@@ -9,8 +9,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.7.0",
-	"appid": "touristappid",
-	"projectname": "demo",
+	"appid": "wxf7bb3683f10d7990",
+	"projectname": "%E7%BF%BB%E8%AF%91%E5%B8%AE",
 	"condition": {
 		"search": {
 			"current": -1,
